bluesky-pds/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bluesky-pds
  name: bluesky-pds
  namespace: bluesky
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: bluesky-pds
  type: ClusterIP
